@@ -1,4 +1,5 @@
-# Copyright 1999-2013 Free Software Foundation, Inc.
+# Copyright 1999, 2000, 2001, 2002, 2004, 2005, 2007, 2008, 2009
+# Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -27,9 +28,10 @@ if [mi_gdb_start] {
     continue
 }
 
-standard_testfile var-cmd.c
-
-if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug}] != "" } {
+set testfile "var-cmd"
+set srcfile ${testfile}.c
+set binfile ${objdir}/${subdir}/mi-var-cmd
+if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug additional_flags=-DFAKEARGV}] != "" } {
     untested mi-var-cmd.exp
     return -1
 }
@@ -54,14 +56,14 @@ mi_create_varobj "global_simple" "global_simple" "create global variable"
 # Desc: Create non-existent variable
 
 mi_gdb_test "112-var-create bogus_unknown_variable * bogus_unknown_variable" \
-	"112\\^error,msg=\"-var-create: unable to create variable object\"" \
+	"112\\^error,msg=\"mi_cmd_var_create: unable to create variable object\"" \
 	"create non-existent variable"
 
 # Test: c_variable-1.3
 # Desc: Create out of scope variable
 
 mi_gdb_test "113-var-create argc * argc" \
-	"113\\^error,msg=\"-var-create: unable to create variable object\"" \
+	"113\\^error,msg=\"mi_cmd_var_create: unable to create variable object\"" \
 	"create out of scope variable"
 
 mi_runto do_locals_tests
@@ -82,9 +84,9 @@ mi_create_varobj_checked lcharacter lcharacter\[0\] char "create local variable 
 
 mi_create_varobj_checked lpcharacter lpcharacter {char \*} "create local variable lpcharacter"
 
-mi_create_varobj_checked llong llong "long" "create local variable llong"
+mi_create_varobj_checked llong llong "long int" "create local variable llong"
 
-mi_create_varobj_checked lplong lplong {long \*} "create local variable lplong"
+mi_create_varobj_checked lplong lplong {long int \*} "create local variable lplong"
 
 mi_create_varobj_checked lfloat lfloat float "create local variable lfloat"
 
@@ -121,7 +123,7 @@ mi_create_varobj_checked lsimple.integer lsimple.integer "int" \
 #    Type names (like int, long, etc..) are all proper expressions to gdb.
 #    make sure variable code does not allow users to create variables, though.
 mi_gdb_test "-var-create int * int" \
-	"&\"Attempt to use a type name as an expression.\\\\n\".*\\^error,msg=\"-var-create: unable to create variable object\"" \
+	"&\"Attempt to use a type name as an expression.\\\\n\".*\\^error,msg=\"mi_cmd_var_create: unable to create variable object\"" \
 	"create int"
 
 
@@ -242,7 +244,7 @@ mi_gdb_test "-var-update *" \
 #
 ###
 mi_gdb_test "-var-assign global_simple 0" \
-	"\\^error,msg=\"-var-assign: Variable object is not editable\"" \
+	"\\^error,msg=\"mi_cmd_var_assign: Variable object is not editable\"" \
 	"assign to global_simple"
 
 mi_gdb_test "-var-assign linteger 3333" \
@@ -375,11 +377,11 @@ mi_gdb_test "-var-update *" \
 	"assign same value to func (update)"
 
 mi_gdb_test "-var-create array_ptr * array_ptr" \
-	"\\^done,name=\"array_ptr\",numchild=\"1\",value=\"$hex <array>\",type=\"int \\*\",has_more=\"0\"" \
+	"\\^done,name=\"array_ptr\",numchild=\"1\",value=\"$hex\",type=\"int \\*\",has_more=\"0\"" \
 	"create global variable array_ptr"
 
 mi_gdb_test "-var-assign array_ptr array2" \
-	"\\^done,value=\"$hex <array2>\"" \
+	"\\^done,value=\"$hex\"" \
 	"assign array to pointer"
 
 mi_gdb_test "-var-update *" \
@@ -387,7 +389,7 @@ mi_gdb_test "-var-update *" \
 	"assign array to pointer (update)"
 
 mi_gdb_test "-var-assign array_ptr array2" \
-	"\\^done,value=\"$hex <array2>\"" \
+	"\\^done,value=\"$hex\"" \
 	"assign same array to pointer"
 
 mi_gdb_test "-var-update *" \
@@ -407,12 +409,12 @@ mi_continue_to subroutine1
 # Desc: create variable for locals i,l in subroutine1
 mi_create_varobj_checked i i int "create i"
 
-mi_create_varobj_checked l l {long \*} "create l"
+mi_create_varobj_checked l l {long int \*} "create l"
 
 # Test: c_variable-2.11
 # Desc: create do_locals_tests local in subroutine1
 mi_gdb_test "-var-create linteger * linteger" \
-	"\\^error,msg=\"-var-create: unable to create variable object\"" \
+	"\\^error,msg=\"mi_cmd_var_create: unable to create variable object\"" \
 	"create linteger"
 
 mi_step_to "subroutine1" "\{name=\"i\",value=\".*\"\},\{name=\"l\",value=\".*\"\}" \
